# telegram-bot-example

./: .dockerignore  .env-example  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: main.py
app/bot/: config.py  db.py  exc.py  feed.py  main.py
app/tests/: test_bot.py
