[project]
name = "telegram-bot"
version = "0.1.0"
description = "A telegram bot for parsing RSS feeds."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "pymongo[srv]>=4.11.3",
    "python-telegram-bot>=22.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
]
